# hegemonia

./: .env.example  .gitignore  PROGRESS.md  QUICKSTART.md  README.md  README_DEPLOYMENT.md  deploy.sh  dev.sh  docker-compose.dev.yml  docker-compose.yml  start-test-server.sh
.claude/: settings.local.json
.github/: DEPLOYMENT.md
.github/workflows/: build-launcher.yml  client-mod.yml  launcher.yml  server-plugins.yml
api/: .env.example  Dockerfile  Dockerfile.dev  package.json
api/prisma/: schema.prisma
api/src/: index.ts
client-mod/: build.gradle  gradle.properties  settings.gradle
database/redis/: redis.conf
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  GAME_DESIGN.md  INSTALLATION.md  ROADMAP.md  TECHNICAL_ARCHITECTURE.md
launcher/: .gitignore  GUIDE_CONNEXION.md  README.md  index.html  install-deps.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  webpack.main.config.js  webpack.renderer.config.js
launcher/api/: .env.example  package-lock.json  package.json
launcher/auto-updater/: Hegemonia-Updater.bat  hegemonia-update.bat  hegemonia-update.ps1  update-hegemonia.py
launcher/simple/: LISEZ-MOI.txt  Lancer_Hegemonia.bat  README.md  build-exe.sh  launcher.py  launcher_auth.py  requirements.txt
launcher/src/: App.tsx  main.tsx
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/src/: commands.rs  launcher.rs  main.rs  minecraft.rs
mods/: README.md
mods/hegemonia-core/: README.md  build.gradle  gradle.properties
nginx/: nginx.conf
nginx/conf.d/: default.conf
scripts/: backup.sh  deploy-client-mod.sh  deploy.sh  generate-secrets.sh  install-hegemonia.sh  install-tools.sh  quick-start.sh  secure-vps.sh  start-paper.sh  start-velocity.sh
server/: server.properties
server/config/: fabric-loader.json
server/configs/: server.properties
server/plugins/: build.gradle.kts  settings.gradle.kts
server/scripts/: backup.sh  start.sh  whitelist-add.sh
server/velocity/: forwarding.secret  velocity.toml
test-servers/: README.md
(+167 files in other folders)
