[package]
name = "hegemonia-launcher"
version = "1.1.2"
description = "Launcher professionnel ultra moderne pour Hegemonia"
authors = ["Hegemonia Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-confirm", "fs-write-file", "fs-exists", "dialog-save", "fs-read-dir", "dialog-open", "dialog-message", "updater", "fs-create-dir", "fs-read-file", "shell-open", "shell-execute", "http-all", "os-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
zip = "0.6"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
